yaag/tests/ui/forbids_await.stderr
error:
       Await outside of async context.
 --> tests/ui/forbids_await.rs:6:13
  |
6 |             core::future::ready::<i32>(42).await;
  |             ^^^^
